bindings/c/whiteout_m3.h

typedef struct whiteout_M3MaterialMap whiteout_M3MaterialMap;
typedef struct whiteout_M3TextureLayer whiteout_M3TextureLayer;
typedef struct whiteout_M3StandardMaterial whiteout_M3StandardMaterial;
void whiteout_m3_M3MaterialMap_set_materialIndex(whiteout_M3MaterialMap* self, uint32_t value);
/* ── M3TextureLayer ─────────────────────────────────────────────── */

/* LAYR — Texture layer (v0–v26, 352–464 bytes) */
/*  */
/* A single texture binding with animated color tint, UV transforms, flipbook parameters, fresnel settings, and AVI video playback controls. Materials embed multiple optional TextureLayer instances for diffuse, specular, emissive, normal, and other texture slots. */
whiteout_M3TextureLayer* whiteout_m3_M3TextureLayer_new(void);
void whiteout_m3_M3TextureLayer_delete(whiteout_M3TextureLayer* self);
/* Layer identifier */
uint32_t whiteout_m3_M3TextureLayer_get_id(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_id(whiteout_M3TextureLayer* self, uint32_t value);
/* Texture file path (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3TextureLayer_get_texturePath(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_texturePath(whiteout_M3TextureLayer* self, const char* value);
/* Layer flags (wrap, flipbook, video, etc.) */
int32_t whiteout_m3_M3TextureLayer_get_flags(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_flags(whiteout_M3TextureLayer* self, int32_t value);
/* UV mapping source */
int32_t whiteout_m3_M3TextureLayer_get_uvMapping(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_uvMapping(whiteout_M3TextureLayer* self, int32_t value);
/* Channel selection */
int32_t whiteout_m3_M3TextureLayer_get_colorType(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_colorType(whiteout_M3TextureLayer* self, int32_t value);
/* POC texture reference */
uint32_t whiteout_m3_M3TextureLayer_get_pocTexture(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_pocTexture(whiteout_M3TextureLayer* self, uint32_t value);
/* Noise amplitude (v24+) */
float whiteout_m3_M3TextureLayer_get_noiseAmplitude(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_noiseAmplitude(whiteout_M3TextureLayer* self, float value);
/* Noise frequency (v24+) */
float whiteout_m3_M3TextureLayer_get_noiseFrequency(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_noiseFrequency(whiteout_M3TextureLayer* self, float value);
/* Texture source override */
uint32_t whiteout_m3_M3TextureLayer_get_textureSource(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_textureSource(whiteout_M3TextureLayer* self, uint32_t value);
/* AVI playback frame rate */
uint32_t whiteout_m3_M3TextureLayer_get_aviFrameRate(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_aviFrameRate(whiteout_M3TextureLayer* self, uint32_t value);
/* AVI start frame */
uint32_t whiteout_m3_M3TextureLayer_get_aviStart(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_aviStart(whiteout_M3TextureLayer* self, uint32_t value);
/* AVI stop frame */
uint32_t whiteout_m3_M3TextureLayer_get_aviStop(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_aviStop(whiteout_M3TextureLayer* self, uint32_t value);
/* AVI loop mode */
uint32_t whiteout_m3_M3TextureLayer_get_aviLoop(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_aviLoop(whiteout_M3TextureLayer* self, uint32_t value);
/* AVI sync mode */
uint32_t whiteout_m3_M3TextureLayer_get_aviSync(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_aviSync(whiteout_M3TextureLayer* self, uint32_t value);
/* Flipbook grid rows */
uint32_t whiteout_m3_M3TextureLayer_get_flipbookRows(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_flipbookRows(whiteout_M3TextureLayer* self, uint32_t value);
/* Flipbook grid columns */
uint32_t whiteout_m3_M3TextureLayer_get_flipbookColumns(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_flipbookColumns(whiteout_M3TextureLayer* self, uint32_t value);
/* UV source related field */
uint32_t whiteout_m3_M3TextureLayer_get_uvSourceRelated(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_uvSourceRelated(whiteout_M3TextureLayer* self, uint32_t value);
/* Fresnel effect mode */
int32_t whiteout_m3_M3TextureLayer_get_fresnelMode(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_fresnelMode(whiteout_M3TextureLayer* self, int32_t value);
/* Fresnel exponent (edge sharpness) */
float whiteout_m3_M3TextureLayer_get_fresnelExponent(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_fresnelExponent(whiteout_M3TextureLayer* self, float value);
/* Fresnel minimum intensity */
float whiteout_m3_M3TextureLayer_get_fresnelMin(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_fresnelMin(whiteout_M3TextureLayer* self, float value);
/* Fresnel maximum intensity */
float whiteout_m3_M3TextureLayer_get_fresnelMax(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_fresnelMax(whiteout_M3TextureLayer* self, float value);
/* Fresnel UV translation (v25+) */
whiteout_Vector3f* whiteout_m3_M3TextureLayer_get_fresnelTranslation(whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_fresnelTranslation(whiteout_M3TextureLayer* self, const whiteout_Vector3f* value);
/* Fresnel mask vector (v25+) */
whiteout_Vector3f* whiteout_m3_M3TextureLayer_get_fresnelMask(whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_fresnelMask(whiteout_M3TextureLayer* self, const whiteout_Vector3f* value);
/* Fresnel UV rotation (v25+) */
whiteout_Vector2f* whiteout_m3_M3TextureLayer_get_fresnelRotation(whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_fresnelRotation(whiteout_M3TextureLayer* self, const whiteout_Vector2f* value);
/* UV density hint (v0–v25, absent in v26) */
uint32_t whiteout_m3_M3TextureLayer_get_uvDensity(const whiteout_M3TextureLayer* self);
void whiteout_m3_M3TextureLayer_set_uvDensity(whiteout_M3TextureLayer* self, uint32_t value);
/* ── M3StandardMaterial ─────────────────────────────────────────────── */

/* MAT_ — Standard material (v0–v20, 268–352 bytes) */
/*  */
/* The primary material type with up to 18 texture layers (diffuse, specular, emissive, normal, height, etc.), blend mode, HDR multipliers, and per-version extensions for normal-blend and gloss layers. */
whiteout_M3StandardMaterial* whiteout_m3_M3StandardMaterial_new(void);
void whiteout_m3_M3StandardMaterial_delete(whiteout_M3StandardMaterial* self);
/* Material name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3StandardMaterial_get_name(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_name(whiteout_M3StandardMaterial* self, const char* value);
/* Additional flags */
int32_t whiteout_m3_M3StandardMaterial_get_additionalFlags(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_additionalFlags(whiteout_M3StandardMaterial* self, int32_t value);
/* Material rendering flags */
int32_t whiteout_m3_M3StandardMaterial_get_flags(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_flags(whiteout_M3StandardMaterial* self, int32_t value);
/* Alpha blend mode */
int32_t whiteout_m3_M3StandardMaterial_get_blendMode(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_blendMode(whiteout_M3StandardMaterial* self, int32_t value);
/* Render priority (lower = earlier) */
int32_t whiteout_m3_M3StandardMaterial_get_priority(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_priority(whiteout_M3StandardMaterial* self, int32_t value);
/* RTT channel mask */
uint32_t whiteout_m3_M3StandardMaterial_get_rttChannels(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_rttChannels(whiteout_M3StandardMaterial* self, uint32_t value);
/* Specular highlight exponent */
float whiteout_m3_M3StandardMaterial_get_specularExponent(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_specularExponent(whiteout_M3StandardMaterial* self, float value);
/* Depth blend falloff distance */
float whiteout_m3_M3StandardMaterial_get_depthBlendFalloff(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_depthBlendFalloff(whiteout_M3StandardMaterial* self, float value);
/* Alpha test cut-off value */
uint32_t whiteout_m3_M3StandardMaterial_get_alphaTestThreshold(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_alphaTestThreshold(whiteout_M3StandardMaterial* self, uint32_t value);
/* HDR specular multiplier */
float whiteout_m3_M3StandardMaterial_get_hdrSpecularMultiplier(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_hdrSpecularMultiplier(whiteout_M3StandardMaterial* self, float value);
/* HDR emissive multiplier */
float whiteout_m3_M3StandardMaterial_get_hdrEmissiveMultiplier(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_hdrEmissiveMultiplier(whiteout_M3StandardMaterial* self, float value);
/* HDR environment constant (v20) */
float whiteout_m3_M3StandardMaterial_get_hdrEnvironmentConstant(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_hdrEnvironmentConstant(whiteout_M3StandardMaterial* self, float value);
/* HDR environment diffuse (v20) */
float whiteout_m3_M3StandardMaterial_get_hdrEnvironmentDiffuse(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_hdrEnvironmentDiffuse(whiteout_M3StandardMaterial* self, float value);
/* HDR environment specular (v20) */
float whiteout_m3_M3StandardMaterial_get_hdrEnvironmentSpecular(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_hdrEnvironmentSpecular(whiteout_M3StandardMaterial* self, float value);
/* Material class (unit, building, etc.) */
int32_t whiteout_m3_M3StandardMaterial_get_materialClass(const whiteout_M3StandardMaterial* self);